crates/ferrum-interfaces/tests/ui/vnext/fail/operation_dispatch_has_no_raw_encode.rs
use ferrum_interfaces::vnext::OperationDispatch;

fn raw_command_escape_is_absent() {
    let _ = OperationDispatch::encode;
}

fn main() {}
